# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.176 2005/03/02 02:37:56 wolf31o2 Exp $

  01 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-preclean2-chroot.sh:
  Added SLOT files back to /var/db entries in stage1.

  01 Mar 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +livecd/files/gentoo.png, livecd/files/livecd-local.start,
  livecd/runscript/default-runscript.sh,
  livecd/runscript-support/livecdfs-update.sh,
  targets/livecd-stage2/unmerge.sh:
  Moved portage profiles from livecd-local.start to unmerge.sh, since /usr is
  not writeable at boot. Removed -a from cp in default-runscript.sh to keep
  the copy from preserving permissions and also adding /usr/share/faces and
  default Gentoo icon. We'll see how the icon does for us. Removing serial
  init script, as it causes problems with the splash theme.

  28 Feb 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1.sh:
  -n, not -z

  28 Feb 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/livecd-local.start, livecd/runscript/default-runscript.sh,
  livecd/runscript-support/kmerge.sh,
  livecd/runscript-support/livecdfs-update.sh,
  livecd/runscript-support/post-kmerge.sh, modules/snapshot_target.py,
  targets/livecd-stage1/livecd-stage1.sh, targets/stage1/stage1-chroot.sh,
  targets/stage1/stage1-preclean2-chroot.sh:
  Removed x-setup from local.start and added in symlinks for gconf, portage
  profiles (for installer) and /var/db. Added a touch for root's .bashrc for
  baselayout and removed /etc/startx from the environmental type. Commented
  unmerge of sources in kmerge.sh, as they should be unmerged by the spec
  file. Changed livecdfs-update.sh to setup /etc/hosts properly, allow wheel
  users to use sudo with no password, mount /usr/lib/X11/xkb/compiled as tmpfs